# Benchmarks

./: LICENSE.md  README.md  RESULTS.md
django/: dockerfile  manage.py  requirements.txt
django/api/: serlaizers.py  urls.py  views.py
django/benchmark/: asgi.py  settings.py  urls.py  wsgi.py
fastapi/: dockerfile  main.py
fastapi/api/v1/: api.py
fastapi/api/v1/endpoint/: greetings.py
fastapi/schemas/: validation.py
go/: Dockerfile  go.mod
go/cmd/api/: main.go
go/internal/routes/: greetings.go  setup_routes.go
go/internal/routes/dtos/req/: create_greeting.dto.go
go/internal/routes/dtos/res/: created_greeting.dto.go
laravel/: .dockerignore  Dockerfile
laravel/app/Http/Controllers/: GreetingsController.php
laravel/routes/: api.php
load-test/: benchmark.js  parsing-validation.js
nest/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
nest/src/: app.module.ts  main.ts
nest/src/greetings/: greetings.controller.ts  greetings.module.ts  greetings.service.ts
nest/src/greetings/dtos/req/: create-greeting.dto.ts
nest/src/greetings/dtos/res/: greeting-created-response.dto.ts  greetings-response.dto.ts
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
